--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ div {
     display: inline;
 }
 
-img {
+img,audio {
     animation: colorize 2s cubic-bezier(0, 0, .78, .36) 1;
     background: transparent;
     border: 10px solid rgba(0, 0, 0, 0.12);
